recursion.cons.lessons.recursion.cons.ButLast.scala.error
butLast:2: error: only classes can have declared but undefined members
(Note that variables need to be initialized to be defined)
var tableau:Array[Int]
    ^butLast:9: error: not enough arguments for method apply: (i: Int)Int in class Array.
Unspecified value parameter i.
return tableau()
              ^butLast:3: error: type mismatch;
 found   : Unit
 required: List[Int]
for(i <- 0 to l.length - 1)
      ^